@@ -42,14 +42,16 @@ read_shape <- function(file, current.projection=NULL, as.sf=TRUE, ...){
 		}
 
 		## rd projection correction: add towgs84 parameter to frequently used rd projection strings
-		if (prj %in% c("+proj=sterea +lat_0=52.15616055555555 +lon_0=5.38763888888889 +k=0.999908 +x_0=155000 +y_0=463000 +ellps=bessel +units=m +no_defs",
-					   "+proj=sterea +lat_0=52.15616055555555 +lon_0=5.38763888888889 +k=0.9999079 +x_0=155000 +y_0=463000 +ellps=bessel +units=m +no_defs",
-					   "+proj=sterea +lat_0=52.156161 +lon_0=5.387639 +k=0.999908 +x_0=155000 +y_0=463000 +ellps=bessel +units=m +no_defs")) {
+		if (prj %in% .wrong_rd_projections) {
+		    warning("rd projection recognized, but witout +towgs84 attribute. Shape has been converted to EPSG:28992")
 			shp <- suppressWarnings(set_projection(shp, current.projection="rd", overwrite.current.projection=TRUE))
 		}
 	}
 	if (as.sf) as(shp, "sf") else shp
 }
+
+
+
 
 #' Write shape file
 #'
